objects/L2I_General_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Usage_Batch_Size__c</fullName>
        <label>Adjustment Usage Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Services_Allowed_Products__c</fullName>
        <label>Aircraft Services Allowed Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allowed_Product_Categories__c</fullName>
        <label>Allowed Product Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disallowed_Product_Categories__c</fullName>
        <label>Disallowed Product Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Order_Activation_Logging__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Order Activation Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_AccountRecordTypes__c</fullName>
        <label>Excluded Account RecordTypes</label>
        <length>31072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fire_PE_on_Aircraft_Service_Activation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean flag to indicate whether Platform Event (PE) should fire when an Aircraft Service is activated.</description>
        <label>Fire PE on Aircraft Service Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_OrderCreation_GroupName__c</fullName>
        <label>OrderCreation Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Placeholder_Parts__c</fullName>
        <label>Placeholder Parts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Usage_Batch_Successes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Usage Batch Successes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityTypeExcluded_PORequired__c</fullName>
        <label>OpportunityType Excluded PO Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Activation_Batch_Size__c</fullName>
        <label>Order Activation Batch Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Activation_Schedule_Job_Offset_Min__c</fullName>
        <description>The number of minutes between Order Activation Scheduled Jobs</description>
        <label>Order Activation Schedule Job Offset Min</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PL_Corporate_Tax_Rate__c</fullName>
        <label>Corporate Tax Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>System_Alert_Recipients__c</fullName>
        <label>System Alert Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Alert_Sender__c</fullName>
        <label>System Alert Sender</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Batch_Size__c</fullName>
        <label>Usage Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>L2I General Settings</label>
    <pluralLabel>L2I General Settings</pluralLabel>
</CustomObject>